--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bnutalk.activitytest"
+    package="com.bnutalk.ui"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,18 +11,19 @@
         android:allowBackup="true"
         android:icon="@drawable/bk1"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+       android:theme="@android:style/Theme.Light">
         <activity 
-            android:name=".LogActivity"
+            android:name="com.bnutalk.ui.Personal_Country"
             android:label="@string/app_name">
         <intent-filter >
          <action android:name="android.intent.action.MAIN"/>
          <category android:name="android.intent.category.LAUNCHER"/>   
         </intent-filter>
         </activity>
+        
         <activity
-            android:name="com.bnutalk.activitytest.SignActivity">
+            android:name="com.bnutalk.ui.LoginActivity">
         </activity>
-    </application>
+       </application>
 
 </manifest>
