--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,24 +6,27 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="14" />
-	<uses-permission  android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/bk1"
         android:label="@string/app_name"
-       android:theme="@android:style/Theme.Light">
-        <activity 
-            android:name="com.bnutalk.ui.Personal_Country"
-            android:label="@string/app_name">
-        <intent-filter >
-         <action android:name="android.intent.action.MAIN"/>
-         <category android:name="android.intent.category.LAUNCHER"/>   
-        </intent-filter>
-        </activity>
-        
+        android:theme="@android:style/Theme.Light" >
         <activity
-            android:name="com.bnutalk.ui.LoginActivity">
+            android:name="com.bnutalk.ui.personalInfo"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-       </application>
+        <activity android:name="com.bnutalk.ui.LoginActivity" >
+        </activity>
+    </application>
 
 </manifest>
