--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light" >
         <activity
-            android:name="com.bnutalk.ui.personalInfo"
+            android:name="com.bnutalk.ui.SignUpAcitivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.bnutalk.ui.LoginActivity" >
-        </activity>
+        <activity android:name="com.bnutalk.ui.LoginActivity" ></activity>
+        <activity android:name="com.bnutalk.ui.SignUpPersInfoActivity"></activity>
     </application>
-
 </manifest>
