--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/com/bnutalk/lanunch/FirstFragment.java=UTF-8
+encoding//src/com/bnutalk/lanunch/FourFragment.java=UTF-8
 encoding//src/com/bnutalk/ui/SignUpPersInfoActivity.java=UTF-8
