--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light" >
         <activity
-            android:name="com.bnutalk.ui.SignUpAcitivity"
+            android:name="com.bnutalk.ui.LanunchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +26,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.bnutalk.ui.LoginActivity" ></activity>
+        <activity android:name="com.bnutalk.ui.SignUpAcitivity"></activity>
         <activity android:name="com.bnutalk.ui.SignUpPersInfoActivity"></activity>
     </application>
 </manifest>
