增加聊天功能简易代码
能识别发送方和接收方

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/com/bnutalk/lanunch/FirstFragment.java=UTF-8
 encoding//src/com/bnutalk/lanunch/FourFragment.java=UTF-8
 encoding//src/com/bnutalk/ui/SignUpPersInfoActivity.java=UTF-8
+encoding/<project>=UTF-8
