聊天完善:UI可显示消息
增加消息列表和发送消息UI，一对一消息正常发送和显示，消息正文可包含回车和换行，but代码一团糟

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,22 +10,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/bk1"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light" >
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bnutalk.IMtest.MultiThreadActivity"
+            android:name="com.bnutalk.IMtest.MsgFriendListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name="com.bnutalk.ui.SignUpAcitivity"></activity>
         <activity android:name="com.bnutalk.ui.SignUpPersInfoActivity"></activity>
+        <activity android:name="com.bnutalk.IMtest.SendMsgActivity"></activity>
     </application>
 </manifest>
