--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,10 @@
 			<attribute name="source_encoding" value="UTF-8"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/gson-2.2.4.jar" sourcepath="G:/请找这里/大三下/软件工程/工具存档/gson/gson-2.3.1-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/G:/请找这里/大三下/软件工程/工具存档/gson/gson-2.3.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
