--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bnutalk.IMtest.MsgFriendListActivity"
+            android:name="com.bnutalk.ui.MsgFriendListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,5 @@
         </activity>
         <activity android:name="com.bnutalk.ui.SignUpAcitivity"></activity>
         <activity android:name="com.bnutalk.ui.SignUpPersInfoActivity"></activity>
-        <activity android:name="com.bnutalk.IMtest.SendMsgActivity"></activity>
     </application>
 </manifest>
