--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,20 +10,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/bk1"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bnutalk.ui.MsgFriendListActivity"
+            android:name="com.bnutalk.ui.SignUpAcitivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.bnutalk.ui.SignUpAcitivity"></activity>
+        <activity android:name="com.bnutalk.ui.LoginActivity"></activity>
         <activity android:name="com.bnutalk.ui.SignUpPersInfoActivity"></activity>
+        <activity android:name="com.bnutalk.ui.SendMsgActivity"></activity>
+        <activity android:name="com.bnutalk.ui.MsgFriendListActivity"></activity>
     </application>
 </manifest>
