--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,18 +17,21 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bnutalk.ui.AddFriendActivity"
+            android:name="com.bnutalk.ui.LanunchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity android:name="com.bnutalk.ui.MainActivity"></activity>
         <activity android:name="com.bnutalk.ui.LoginActivity"></activity>
         <activity android:name="com.bnutalk.ui.SignUpAcitivity"></activity>
         <activity android:name="com.bnutalk.ui.SignUpPersInfoActivity"></activity>
         <activity android:name="com.bnutalk.ui.RecentMsgListActivity"></activity>
         <activity android:name="com.bnutalk.ui.ChatActivity"></activity>
+        <activity android:name="com.bnutalk.ui.ContactActivity"></activity>
+        <activity android:name="com.bnutalk.ui.AddContactsActivity"></activity>
+        
     </application>
 </manifest>
