--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:allowBackup="true"
         android:icon="@drawable/bk1"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="com.bnutalk.util.MyApplication">
         <activity
             android:name="com.bnutalk.ui.LanunchActivity"
             android:label="@string/app_name" >
@@ -32,6 +33,6 @@
         <activity android:name="com.bnutalk.ui.ChatActivity"></activity>
         <activity android:name="com.bnutalk.ui.ContactActivity"></activity>
         <activity android:name="com.bnutalk.ui.AddContactsActivity"></activity>
-        
-    </application>
+        <service android:name="com.bnutalk.server.UpdateContactService"></service>
+        </application>
 </manifest>
