--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name="com.bnutalk.ui.ChatActivity"></activity>
         <activity android:name="com.bnutalk.ui.ContactActivity"></activity>
         <activity android:name="com.bnutalk.ui.AddContactsActivity"></activity>
+        <activity android:name="com.bnutalk.ui.SettingsAcitivity"></activity>
+        
         <service android:name="com.bnutalk.server.UpdateContactService"></service>
         </application>
 </manifest>
