修改：好友列表点击弹出信息卡片；删减冗余代码

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name="com.bnutalk.ui.ContactActivity"></activity>
         <activity android:name="com.bnutalk.ui.AddContactsActivity"></activity>
         <activity android:name="com.bnutalk.ui.SettingsAcitivity"></activity>
+        <activity android:name="com.bnutalk.ui.ContactInfoCardActivity"></activity>
+        
         
         <service android:name="com.bnutalk.server.UpdateContactService"></service>
         </application>
