增加：设置界面点击头像弹出个人信息卡

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name="com.bnutalk.ui.AddContactsActivity"></activity>
         <activity android:name="com.bnutalk.ui.SettingsAcitivity"></activity>
         <activity android:name="com.bnutalk.ui.ContactInfoCardActivity"></activity>
-        
+        <activity android:name="com.bnutalk.ui.SettingSelfCardActivity"></activity>
         
         <service android:name="com.bnutalk.server.UpdateContactService"></service>
         </application>
