--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,5 +38,6 @@
         <activity android:name="com.bnutalk.ui.SettingSelfCardActivity"></activity>
         
         <service android:name="com.bnutalk.server.UpdateContactService"></service>
+        <service android:name="com.bnutalk.server.MsgService"></service>
         </application>
 </manifest>
